verilog-langserver/verilog-parser/grammar/VerilogParser.py
# Generated from VerilogParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class VerilogParser ( Parser ):

    grammarFileName = "VerilogParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "' '", "'\t'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "<INVALID>", "<INVALID>", "'begin'", "'end'", 
                     "'task'", "'endtask'", "'randcase'", "'case'", "'endcase'", 
                     "'class'", "'endclass'", "'table'", "'endtable'", "'config'", 
                     "'endconfig'", "'module'", "'endmodule'", "'specify'", 
                     "'endspecify'", "'package'", "'endpackage'", "'program'", 
                     "'endprogram'", "'coverage'", "'endcoverage'", "'property'", 
                     "'endproperty'", "'sequence'", "'endsequence'", "'function'", 
                     "'endfunction'", "'clocking'", "'endclocking'", "'generate'", 
                     "'endgenerate'", "'primitive'", "'endprimitive'", "'interface'", 
                     "'endinterface'", "'if'", "'else'", "'disable'", "'fork'", 
                     "<INVALID>", "'virtual'" ]

    symbolicNames = [ "<INVALID>", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
                      "SPACE", "TAB", "NEWLINE", "STRING", "COMPILER_DIRECTIVE", 
                      "WORD", "SEMICOLON", "Identifier", "Label", "Begin", 
                      "End", "Task", "Endtask", "Randcase", "Case", "Endcase", 
                      "Class", "Endclass", "Table", "Endtable", "Config", 
                      "Endconfig", "Module", "Endmodule", "Specify", "Endspecify", 
                      "Package", "Endpackage", "Program", "Endprogram", 
                      "Coverage", "Endcoverage", "Property", "Endproperty", 
                      "Sequence", "Endsequence", "Function", "Endfunction", 
                      "Clocking", "Endclocking", "Generate", "Endgenerate", 
                      "Primitive", "Endprimitive", "Interface", "Endinterface", 
                      "If", "Else", "Disable", "Fork", "Join", "Virtual", 
                      "NUMBER", "INTEGRAL_NUMBER", "REAL_NUMBER", "DECIMAL_NUMBER", 
                      "BINARY_NUMBER", "OCTAL_NUMBER", "HEX_NUMBER", "SIZE", 
                      "NON_ZERO_NUMBER", "UNSIGNED_NUMBER", "DECIMAL_VALUE", 
                      "BINARY_VALUE", "OCTAL_VALUE", "HEX_VALUE", "UNBASED_UNSIZED_LITERAL" ]

    RULE_source = 0
    RULE_declaration = 1
    RULE_module_declaration = 2
    RULE_interface_declaration = 3
    RULE_program_declaration = 4
    RULE_package_declaration = 5
    RULE_config_declaration = 6
    RULE_package_item = 7
    RULE_task_declaration = 8
    RULE_function_declaration = 9
    RULE_class_declaration = 10

    ruleNames =  [ "source", "declaration", "module_declaration", "interface_declaration", 
                   "program_declaration", "package_declaration", "config_declaration", 
                   "package_item", "task_declaration", "function_declaration", 
                   "class_declaration" ]

    EOF = Token.EOF
    SINGLELINE_COMMENT=1
    MULTILINE_COMMENT=2
    SPACE=3
    TAB=4
    NEWLINE=5
    STRING=6
    COMPILER_DIRECTIVE=7
    WORD=8
    SEMICOLON=9
    Identifier=10
    Label=11
    Begin=12
    End=13
    Task=14
    Endtask=15
    Randcase=16
    Case=17
    Endcase=18
    Class=19
    Endclass=20
    Table=21
    Endtable=22
    Config=23
    Endconfig=24
    Module=25
    Endmodule=26
    Specify=27
    Endspecify=28
    Package=29
    Endpackage=30
    Program=31
    Endprogram=32
    Coverage=33
    Endcoverage=34
    Property=35
    Endproperty=36
    Sequence=37
    Endsequence=38
    Function=39
    Endfunction=40
    Clocking=41
    Endclocking=42
    Generate=43
    Endgenerate=44
    Primitive=45
    Endprimitive=46
    Interface=47
    Endinterface=48
    If=49
    Else=50
    Disable=51
    Fork=52
    Join=53
    Virtual=54
    NUMBER=55
    INTEGRAL_NUMBER=56
    REAL_NUMBER=57
    DECIMAL_NUMBER=58
    BINARY_NUMBER=59
    OCTAL_NUMBER=60
    HEX_NUMBER=61
    SIZE=62
    NON_ZERO_NUMBER=63
    UNSIGNED_NUMBER=64
    DECIMAL_VALUE=65
    BINARY_VALUE=66
    OCTAL_VALUE=67
    HEX_VALUE=68
    UNBASED_UNSIZED_LITERAL=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VerilogParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerilogParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(VerilogParser.DeclarationContext,i)


        def getRuleIndex(self):
            return VerilogParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):

        localctx = VerilogParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VerilogParser.SINGLELINE_COMMENT) | (1 << VerilogParser.MULTILINE_COMMENT) | (1 << VerilogParser.SPACE) | (1 << VerilogParser.TAB) | (1 << VerilogParser.NEWLINE) | (1 << VerilogParser.STRING) | (1 << VerilogParser.COMPILER_DIRECTIVE) | (1 << VerilogParser.WORD) | (1 << VerilogParser.SEMICOLON) | (1 << VerilogParser.Identifier) | (1 << VerilogParser.Label) | (1 << VerilogParser.Begin) | (1 << VerilogParser.End) | (1 << VerilogParser.Task) | (1 << VerilogParser.Endtask) | (1 << VerilogParser.Randcase) | (1 << VerilogParser.Case) | (1 << VerilogParser.Endcase) | (1 << VerilogParser.Class) | (1 << VerilogParser.Endclass) | (1 << VerilogParser.Table) | (1 << VerilogParser.Endtable) | (1 << VerilogParser.Config) | (1 << VerilogParser.Endconfig) | (1 << VerilogParser.Module) | (1 << VerilogParser.Endmodule) | (1 << VerilogParser.Specify) | (1 << VerilogParser.Endspecify) | (1 << VerilogParser.Package) | (1 << VerilogParser.Endpackage) | (1 << VerilogParser.Program) | (1 << VerilogParser.Endprogram) | (1 << VerilogParser.Coverage) | (1 << VerilogParser.Endcoverage) | (1 << VerilogParser.Property) | (1 << VerilogParser.Endproperty) | (1 << VerilogParser.Sequence) | (1 << VerilogParser.Endsequence) | (1 << VerilogParser.Function) | (1 << VerilogParser.Endfunction) | (1 << VerilogParser.Clocking) | (1 << VerilogParser.Endclocking) | (1 << VerilogParser.Generate) | (1 << VerilogParser.Endgenerate) | (1 << VerilogParser.Primitive) | (1 << VerilogParser.Endprimitive) | (1 << VerilogParser.Interface) | (1 << VerilogParser.Endinterface) | (1 << VerilogParser.If) | (1 << VerilogParser.Else) | (1 << VerilogParser.Disable) | (1 << VerilogParser.Fork) | (1 << VerilogParser.Join) | (1 << VerilogParser.Virtual) | (1 << VerilogParser.NUMBER) | (1 << VerilogParser.INTEGRAL_NUMBER) | (1 << VerilogParser.REAL_NUMBER) | (1 << VerilogParser.DECIMAL_NUMBER) | (1 << VerilogParser.BINARY_NUMBER) | (1 << VerilogParser.OCTAL_NUMBER) | (1 << VerilogParser.HEX_NUMBER) | (1 << VerilogParser.SIZE) | (1 << VerilogParser.NON_ZERO_NUMBER))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (VerilogParser.UNSIGNED_NUMBER - 64)) | (1 << (VerilogParser.DECIMAL_VALUE - 64)) | (1 << (VerilogParser.BINARY_VALUE - 64)) | (1 << (VerilogParser.OCTAL_VALUE - 64)) | (1 << (VerilogParser.HEX_VALUE - 64)) | (1 << (VerilogParser.UNBASED_UNSIZED_LITERAL - 64)))) != 0):
                self.state = 22
                self.declaration()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(VerilogParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Module_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Interface_declarationContext,0)


        def program_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Program_declarationContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Package_declarationContext,0)


        def package_item(self):
            return self.getTypedRuleContext(VerilogParser.Package_itemContext,0)


        def config_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Config_declarationContext,0)


        def getRuleIndex(self):
            return VerilogParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = VerilogParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.module_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.interface_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.program_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.package_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.package_item()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 35
                self.config_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Module(self):
            return self.getToken(VerilogParser.Module, 0)

        def Endmodule(self):
            return self.getToken(VerilogParser.Endmodule, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_module_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_declaration" ):
                listener.enterModule_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_declaration" ):
                listener.exitModule_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_declaration" ):
                return visitor.visitModule_declaration(self)
            else:
                return visitor.visitChildren(self)




    def module_declaration(self):

        localctx = VerilogParser.Module_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(VerilogParser.Module)
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 39
                    self.matchWildcard() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 45
            self.match(VerilogParser.Endmodule)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Interface(self):
            return self.getToken(VerilogParser.Interface, 0)

        def Endinterface(self):
            return self.getToken(VerilogParser.Endinterface, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_interface_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterface_declaration" ):
                listener.enterInterface_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterface_declaration" ):
                listener.exitInterface_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_declaration" ):
                return visitor.visitInterface_declaration(self)
            else:
                return visitor.visitChildren(self)




    def interface_declaration(self):

        localctx = VerilogParser.Interface_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interface_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(VerilogParser.Interface)
            self.state = 51
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 48
                    self.matchWildcard() 
                self.state = 53
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 54
            self.match(VerilogParser.Endinterface)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Program(self):
            return self.getToken(VerilogParser.Program, 0)

        def Endprogram(self):
            return self.getToken(VerilogParser.Endprogram, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_program_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_declaration" ):
                listener.enterProgram_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_declaration" ):
                listener.exitProgram_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_declaration" ):
                return visitor.visitProgram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def program_declaration(self):

        localctx = VerilogParser.Program_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(VerilogParser.Program)
            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 57
                    self.matchWildcard() 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 63
            self.match(VerilogParser.Endprogram)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Package(self):
            return self.getToken(VerilogParser.Package, 0)

        def Endpackage(self):
            return self.getToken(VerilogParser.Endpackage, 0)

        def package_item(self):
            return self.getTypedRuleContext(VerilogParser.Package_itemContext,0)


        def getRuleIndex(self):
            return VerilogParser.RULE_package_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_declaration" ):
                listener.enterPackage_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_declaration" ):
                listener.exitPackage_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = VerilogParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_package_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(VerilogParser.Package)
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 66
                self.package_item()
                pass

            elif la_ == 2:
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 67
                        self.matchWildcard() 
                    self.state = 72
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass


            self.state = 75
            self.match(VerilogParser.Endpackage)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Config(self):
            return self.getToken(VerilogParser.Config, 0)

        def Endconfig(self):
            return self.getToken(VerilogParser.Endconfig, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_config_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_declaration" ):
                listener.enterConfig_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_declaration" ):
                listener.exitConfig_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_declaration" ):
                return visitor.visitConfig_declaration(self)
            else:
                return visitor.visitChildren(self)




    def config_declaration(self):

        localctx = VerilogParser.Config_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(VerilogParser.Config)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 78
                    self.matchWildcard() 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 84
            self.match(VerilogParser.Endconfig)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def task_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Task_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Function_declarationContext,0)


        def class_declaration(self):
            return self.getTypedRuleContext(VerilogParser.Class_declarationContext,0)


        def SEMICOLON(self):
            return self.getToken(VerilogParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_package_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackage_item" ):
                listener.enterPackage_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackage_item" ):
                listener.exitPackage_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_item" ):
                return visitor.visitPackage_item(self)
            else:
                return visitor.visitChildren(self)




    def package_item(self):

        localctx = VerilogParser.Package_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_package_item)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.task_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.function_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.class_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 89
                        self.matchWildcard() 
                    self.state = 94
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 95
                self.match(VerilogParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Task_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Task(self):
            return self.getToken(VerilogParser.Task, 0)

        def Endtask(self):
            return self.getToken(VerilogParser.Endtask, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_task_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask_declaration" ):
                listener.enterTask_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask_declaration" ):
                listener.exitTask_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_declaration" ):
                return visitor.visitTask_declaration(self)
            else:
                return visitor.visitChildren(self)




    def task_declaration(self):

        localctx = VerilogParser.Task_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_task_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(VerilogParser.Task)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 99
                    self.matchWildcard() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 105
            self.match(VerilogParser.Endtask)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Function(self):
            return self.getToken(VerilogParser.Function, 0)

        def Endfunction(self):
            return self.getToken(VerilogParser.Endfunction, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = VerilogParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(VerilogParser.Function)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 108
                    self.matchWildcard() 
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 114
            self.match(VerilogParser.Endfunction)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(VerilogParser.Class, 0)

        def Identifier(self):
            return self.getToken(VerilogParser.Identifier, 0)

        def Endclass(self):
            return self.getToken(VerilogParser.Endclass, 0)

        def Virtual(self):
            return self.getToken(VerilogParser.Virtual, 0)

        def Label(self):
            return self.getToken(VerilogParser.Label, 0)

        def getRuleIndex(self):
            return VerilogParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = VerilogParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==VerilogParser.Virtual:
                self.state = 116
                self.match(VerilogParser.Virtual)


            self.state = 119
            self.match(VerilogParser.Class)
            self.state = 120
            self.match(VerilogParser.Identifier)
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 121
                    self.matchWildcard() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 127
            self.match(VerilogParser.Endclass)
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 128
                self.match(VerilogParser.Label)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





